avformat/mux: ignore delayed vp8/9 packets in max_interleave_delta calculation

libvpx adds very significant delay, which appears normal and we must
buffer all other streams no matter what to interleave them correctly

Fixes Ticket3440

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>